--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,12 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>webtemplate</display-name>
+  
+  <servlet>
+  	<servlet-name>spring</servlet-name>
+  	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+  </servlet>
+  
+  <servlet-mapping>
+  	<servlet-name>spring</servlet-name>
+  	<url-pattern>*.wtp</url-pattern>
+  </servlet-mapping>
+  
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
     <welcome-file>index.jsp</welcome-file>
-    <welcome-file>default.html</welcome-file>
-    <welcome-file>default.htm</welcome-file>
-    <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
+  
+  <error-page>
+  	<error-code>400</error-code>
+  	<location>/WEB-INF/error/notFound.jsp</location>
+  </error-page>
+    <error-page>
+  	<error-code>401</error-code>
+  	<location>/WEB-INF/error/notFound.jsp</location>
+  </error-page>
+    <error-page>
+  	<error-code>402</error-code>
+  	<location>/WEB-INF/error/notFound.jsp</location>
+  </error-page>
+    <error-page>
+  	<error-code>403</error-code>
+  	<location>/WEB-INF/error/notFound.jsp</location>
+  </error-page>
+    <error-page>
+  	<error-code>404</error-code>
+  	<location>/WEB-INF/error/notFound.jsp</location>
+  </error-page>
+  <error-page>
+  	<error-code>405</error-code>
+  	<location>/WEB-INF/error/notFound.jsp</location>
+  </error-page>
+    <error-page>
+  	<error-code>406</error-code>
+  	<location>/WEB-INF/error/notFound.jsp</location>
+  </error-page>
+    <error-page>
+  	<error-code>407</error-code>
+  	<location>/WEB-INF/error/notFound.jsp</location>
+  </error-page>
+  <error-page>
+  	<error-code>408</error-code>
+  	<location>/WEB-INF/error/notFound.jsp</location>
+  </error-page>
+    <error-page>
+  	<error-code>409</error-code>
+  	<location>/WEB-INF/error/notFound.jsp</location>
+  </error-page>
+    <error-page>
+  	<error-code>410</error-code>
+  	<location>/WEB-INF/error/notFound.jsp</location>
+  </error-page>
 </web-app>
