--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -2,9 +2,37 @@
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://java.sun.com/xml/ns/javaee" xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd" id="WebApp_ID" version="3.0">
   <display-name>webtemplate</display-name>
   
+  <listener>
+  	<!-- 웹 애플리케이션이 서블릿 컨테이너에 로딩될 때 실행되는 리스너 -->
+  	<!-- 웹 애플리케이션이 실행되면 WebApplicationContext 를 생성한다.  -->
+  	<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+  </listener>
+  
+  <context-param><!-- 생성된 WebApplicationContext가 빈 생성, 관리 시 참고하는 설정 파일  -->
+  	<param-name>contextConfigLocation</param-name>
+  	<param-value>classpath:applicationContext*.xml</param-value>
+  </context-param>
+  
+  <filter>
+		<filter-name>CharacterEncodingFilter</filter-name>
+		<filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+		<init-param>
+			<param-name>encoding</param-name>
+			<param-value>UTF-8</param-value>
+		</init-param>
+		<init-param>
+			<param-name>forceEncoding</param-name>
+			<param-value>true</param-value>
+		</init-param>
+	</filter>
+  
   <servlet>
   	<servlet-name>spring</servlet-name>
   	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+  	<init-param>
+  		<param-name>contextConfigLocation</param-name>
+  		<param-value>/WEB-0INF/spring/webmvc-config.xml</param-value>
+  	</init-param>
   </servlet>
   
   <servlet-mapping>
