--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,13 @@
 	<spring.version>3.2.3.RELEASE</spring.version>
   </properties>
   
+	<repositories>
+		<repository>
+	        <id>central</id>
+	        <url>http://repo1.maven.org/maven2</url>
+	    </repository>
+	</repositories>
+  
   	<dependencies>
 		<dependency>
             <groupId>org.hibernate</groupId>
@@ -79,9 +86,15 @@
 			<artifactId>spring-tx</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
+		
+		 <dependency>
+            <groupId>commons-dbcp</groupId>
+            <artifactId>commons-dbcp</artifactId>
+            <version>1.4</version>
+        </dependency>
 
 		<!-- Hibernate dependecies -->
-		<dependency>
+<!-- 	<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>3.5.6-Final</version>
@@ -95,7 +108,7 @@
 			<groupId>javassist</groupId>
 			<artifactId>javassist</artifactId>
 			<version>3.12.1.GA</version>
-		</dependency>
+		</dependency> -->
 		            
 		<!-- Caching -->
 		<dependency>
@@ -187,7 +200,15 @@
 	</dependencies>
   
   <build>
-    <sourceDirectory>src</sourceDirectory>
+    <sourceDirectory>src/main/com</sourceDirectory>
+    <resources>
+    	<resource>
+    		<directory>src/main/resources</directory>
+    		<includes>
+    			<include>**/*.*</include>
+    		</includes>
+    	</resource>
+    </resources>
     <plugins>
       <plugin>
         <artifactId>maven-compiler-plugin</artifactId>
