--- a/pom.xml
+++ b/pom.xml
@@ -200,7 +200,7 @@
 	</dependencies>
   
   <build>
-    <sourceDirectory>src/main/com</sourceDirectory>
+    <sourceDirectory>src/main/java</sourceDirectory>
     <resources>
     	<resource>
     		<directory>src/main/resources</directory>
