--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -37,7 +37,7 @@
   
   <servlet-mapping>
   	<servlet-name>spring</servlet-name>
-  	<url-pattern>*.wtp</url-pattern>
+  	<url-pattern>/app/*</url-pattern><!-- *.wtp (if using extension) -->
   </servlet-mapping>
   
   <welcome-file-list>
