--- a/pom.xml
+++ b/pom.xml
@@ -197,6 +197,12 @@
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.4.2</version>
 		</dependency>
+		
+		<dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.22</version>
+        </dependency>
 	</dependencies>
   
   <build>
