--- a/pom.xml
+++ b/pom.xml
@@ -203,6 +203,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>5.1.22</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.jdom</groupId>
+            <artifactId>jdom</artifactId>
+            <version>1.1</version>
+        </dependency>
 	</dependencies>
   
   <build>
